--- a/index.html
+++ b/index.html
@@ -756,6 +756,7 @@
       fetchFeed('#feed-SerieA .feed-content', 'https://rss.app/feeds/_IEjWrVaKRW3QNEkB.xml'); // Serie A
       fetchFeed('#feed-Bundesliga .feed-content', 'https://rss.app/feeds/_OFOWQNsn38MFTtLv.xml'); // Bundesliga
       fetchFeed('#feed-LaLiga .feed-content', 'https://rss.app/feeds/_zvRqo1UuuoLB5czl.xml'); // LaLiga
+      fetchFeed('#feed-_5c3ZcfSrwvdwdG2Z .feed-content', 'https://rss.app/feeds/_5c3ZcfSrwvdwdG2Z.xml'); // NHL
       
       // Existing menu functionality
       let selectedSection = 'Home';
