--- a/index.html
+++ b/index.html
@@ -308,6 +308,8 @@
           <li data-section="NCAABaseball">NCAA Baseball</li>
           <li data-section="NCAAMensHockey">NCAA Men’s Hockey</li>
           <li data-section="NCAASoftball">NCAA Softball</li>
+<li data-section="NFL">NFL</li>
+<li data-section="NHL">NHL</li>
           <li data-section="NHRA">NHRA</li>
           <li data-section="Olympics">Olympics</li>
           <li data-section="PGAChampions">PGA Champions</li>
@@ -838,6 +840,3 @@
 
 </body>
 </html>
-
-
-
