--- a/index.html
+++ b/index.html
@@ -665,6 +665,14 @@
   <rssapp-feed id="9EAOd7JHtY1IRVUP"></rssapp-feed>
   <script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
 </div>
+<div id="social-Bundesliga" class="content-section" style="display: none;">
+  <rssapp-feed id="YPjYmfSS1NyBDka8"></rssapp-feed>
+  <script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+</div>
+<div id="social-LaLiga" class="content-section" style="display: none;">
+  <rssapp-feed id="iatyOkXWhSWdum53"></rssapp-feed>
+  <script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
+</div>
 <div id="social-SerieA" class="content-section" style="display: none;">
   <rssapp-feed id="zbTyEkE5gjqLEv3s"></rssapp-feed>
   <script src="https://widget.rss.app/v1/feed.js" type="text/javascript" async></script>
@@ -840,3 +848,6 @@
 
 </body>
 </html>
+
+
+
