--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Multi-Column Webpage with Placeholders for Each League</title>
+ <title>THPORTH</title>
+  <link rel="icon" type="image/png" href="https://github.com/ajolly2/thporthsite/blob/main/thporth_favicon.png?raw=true">
+
   <style>
     html, body {
       margin: 0;
@@ -963,15 +965,5 @@
     });
   });
 </script>
-
-
-
-
-
 </body>
 </html>
-
-
-
-
-
