--- a/testing.html
+++ b/testing.html
@@ -746,8 +746,8 @@
         NBA: "5RV6ZHeyJhWxORz5",
         NFL: "INJ6Bk4bDkbmuBbD",
         NHL: "pNuN9vyuvzYgmCmy",
-        UEFAChampionsLeague: "_UEFASocialFeed",
-        PremierLeague: "_PremierSocialFeed",
+        UEFAChampionsLeague: "fJDD9RMqob2qCjwA",
+        PremierLeague: "neXmnwbubK21ZWYF",
         MLS: "9EAOd7JHtY1IRVUP",
         Bundesliga: "YPjYmfSS1NyBDka8",
         LaLiga: "iatyOkXWhSWdum53",
