--- a/testing.html
+++ b/testing.html
@@ -49,7 +49,7 @@
       }
       .main-menu {
         background-color: #151515;
-        color: #91b3a2;
+        color: #fee12b;
         flex: 0 0 165px;
         font-size: 11px;
         padding: 0;
@@ -121,7 +121,7 @@
       /* Selected menu item styling: bold, highlighted background and black text */
       .selected {
         font-weight: bold;
-        background-color: #91b3a2;
+        background-color: #fee12b;
         color: #000;
       }
       #menuList ul {
@@ -384,7 +384,7 @@
               <li data-section="Ligue1">Ligue 1</li>
               <li data-section="UEFAEuropaLeague">UEFA Europa League</li>
               <li data-section="UEFAConferenceLeague">UEFA Conference League</li>
-              <li class="soccer-more-toggle" style="cursor: pointer; color: #91b3a2;" onclick="toggleSoccerMore()">More…</li>
+              <li class="soccer-more-toggle" style="cursor: pointer; color: #fee12b;" onclick="toggleSoccerMore()">More…</li>
             </ul>
             <div id="soccer-more" style="display: none;">
               <ul style="padding-left: 10px;">
