--- a/testing.html
+++ b/testing.html
@@ -675,10 +675,7 @@
           </div>
         </div>
         <div id="news-UFC" class="content-section" style="display: none;">
-         <div class="rss-feed" id="feed-UFC">
-            <h4>UFC</h4>
-            <div class="feed-content">UFC</div>
-
+          Placeholder content for UFC (News)
         </div>
         <div id="news-Boxing" class="content-section" style="display: none;">
           Placeholder content for Boxing (News)
@@ -949,11 +946,6 @@
           "#feed-PGATour .feed-content",
           "https://rss.app/feeds/_QQsPX3f8GnzYvAXX.xml"
         ); // PGA Tour
- fetchFeed(
-          "#feed-UFC .feed-content",
-          "https://rss.app/feeds/_YGmr1TjOD0yXmfU1.xml"
-        ); // UFC
-
 
         // Existing menu functionality
         let selectedSection = "Home";
@@ -1084,8 +1076,6 @@
     </script>
   </body>
 </html>
-
-
 
 
 
