--- a/testing.html
+++ b/testing.html
@@ -674,12 +674,13 @@
             <div class="feed-content">Loading PGA Tour feed...</div>
           </div>
         </div>
-      <div id="news-UFC" class="content-section" style="display: none;">
+     <div id="news-UFC" class="content-section" style="display: none;">
   <div class="rss-feed" id="feed-UFC">
     <h4>UFC</h4>
     <div class="feed-content">Loading UFC feed...</div>
   </div>
 </div>
+
 
         <div id="news-Boxing" class="content-section" style="display: none;">
           Placeholder content for Boxing (News)
@@ -952,6 +953,9 @@
           "#feed-PGATour .feed-content",
           "https://rss.app/feeds/_QQsPX3f8GnzYvAXX.xml"
         ); // PGA Tour
+fetchFeed("#feed-UFC .feed-content", "https://rss.app/feeds/_YGmr1TjOD0yXmfU1.xml"); // UFC
+
+
 
         // Existing menu functionality
         let selectedSection = "Home";
